Add firebase messaging